sonar-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-bridge
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sonarqube-bridge
  namespace: default
subsets:
  - addresses:
      - ip: 172.20.72.243
    ports:
      - port: 9000
