sonar-pointer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-cross-pointer
  namespace: default
spec:
  type: ExternalName
  externalName: sonarqube-sonarqube.sonarqube.svc.cluster.local
